--- a/docs/css/lay.css
+++ b/docs/css/lay.css
@@ -28,7 +28,7 @@
   color: black;
 }
 #corpo{
-  background: linear-gradient(#6394d8, #00b6f9, white);
+  background: white;
 }
 /* Título do html */
 #titu {
