--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -6,7 +6,7 @@
 
 .header {
   height: 100px;
-  background: linear-gradient(to right, #1625a6, #4355d5, #4f70b7);
+  background: black;
   padding: 0 20px;
   color: white;
 }
@@ -105,5 +105,6 @@
   }
 }
 #desc{
-  background: linear-gradient(blue, #6384ad);
+  background: black;
+  color: white;
 }
