--- a/docs/css/lay.css
+++ b/docs/css/lay.css
@@ -65,10 +65,13 @@ hr {
 p, p1, p2, p3 {
   font-family: "Lato", Arial, sans-serif;
   font-weight: normal;
-  color: black;
+  color: rgb(41, 41, 41);
   line-height: 24px;
   margin: 0;
   margin-bottom: 0px;
   font-size: 21px;
   margin-bottom: 24px;
+  letter-spacing: -0.003em;
+  word-break: break-word;
+  overflow-wrap: break-word;
 }
